--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "eslint-plugin-react-hooks": "^4.6.0",
