--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "classnames": "^2.3.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.7",
     "redux-saga": "^1.2.3",
