--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "posts-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.8",
-    "@types/react-dom": "18.2.4",
-    "axios": "^1.4.0",
-    "bootstrap": "^5.3.0",
-    "classnames": "^2.3.2",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
-    "react": "18.2.0",
-    "react-bootstrap": "^2.7.4",
-    "react-dom": "18.2.0",
-    "react-redux": "^8.0.7",
-    "redux-saga": "^1.2.3",
-    "sass": "^1.62.1",
-    "typescript": "5.1.3"
-  },
-  "devDependencies": {
-    "@svgr/webpack": "^8.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.8",
-    "stylelint": "^15.6.3",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^33.0.0",
-    "stylelint-config-standard-scss": "^9.0.0",
-    "stylelint-order": "^6.0.3",
-    "stylelint-scss": "^5.0.0"
-  }
+	"name": "posts-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"stylelint": "stylelint \"**/*.scss\" --fix"
+	},
+	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.5",
+		"@types/node": "20.2.5",
+		"@types/react": "18.2.8",
+		"@types/react-dom": "18.2.4",
+		"axios": "^1.4.0",
+		"bootstrap": "^5.3.0",
+		"classnames": "^2.3.2",
+		"eslint": "8.42.0",
+		"eslint-config-next": "13.4.4",
+		"next": "13.4.4",
+		"react": "18.2.0",
+		"react-bootstrap": "^2.7.4",
+		"react-dom": "18.2.0",
+		"react-redux": "^8.0.7",
+		"redux-saga": "^1.2.3",
+		"sass": "^1.62.1",
+		"typescript": "5.1.3"
+	},
+	"devDependencies": {
+		"@svgr/webpack": "^8.0.1",
+		"@typescript-eslint/eslint-plugin": "^5.59.8",
+		"@typescript-eslint/parser": "^5.59.8",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"prettier": "^2.8.8",
+		"stylelint": "^15.6.3",
+		"stylelint-config-rational-order": "^0.1.2",
+		"stylelint-config-standard": "^33.0.0",
+		"stylelint-config-standard-scss": "^9.0.0",
+		"stylelint-order": "^6.0.3",
+		"stylelint-scss": "^5.0.0"
+	}
 }
