--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
+		"prepare": "husky install",
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
@@ -34,6 +35,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.59.8",
 		"@typescript-eslint/parser": "^5.59.8",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"husky": "^8.0.3",
 		"prettier": "^2.8.8",
 		"stylelint": "^15.6.3",
 		"stylelint-config-rational-order": "^0.1.2",
