--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@types/node": "20.2.5",
 		"@types/react": "18.2.8",
 		"@types/react-dom": "18.2.4",
-		"axios": "^1.4.0",
+		"axios": "1.3.6",
 		"bootstrap": "^5.3.0",
 		"classnames": "^2.3.2",
 		"eslint": "8.42.0",
